--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "firebase": "^8.7.1",
-    "node-sass": "5.0.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
